# digestive-functors-scotty

./: LICENSE  README.md  digestive-functors-scotty.cabal
src/Text/Digestive/: Scotty.hs
